ros2_docker_ws/ur5_ws/log/build_2026-02-04_16-03-31/ur5_motion_planning/stderr.log
/workspace/ur5_ws/src/ur5_motion_planning/src/ur5_plan_and_analyze_node.cpp:437:23: warning: missing terminating " character
  437 |   RCLCPP_INFO(logger, "--- Analysis comple
      |                       ^
/workspace/ur5_ws/src/ur5_motion_planning/src/ur5_plan_and_analyze_node.cpp:437:43: error: unterminated argument list invoking macro "RCLCPP_INFO"
  437 |   RCLCPP_INFO(logger, "--- Analysis comple
      |                                           ^
/workspace/ur5_ws/src/ur5_motion_planning/src/ur5_plan_and_analyze_node.cpp: In function ‘int main(int, char**)’:
/workspace/ur5_ws/src/ur5_motion_planning/src/ur5_plan_and_analyze_node.cpp:437:3: error: ‘RCLCPP_INFO’ was not declared in this scope
  437 |   RCLCPP_INFO(logger, "--- Analysis comple
      |   ^~~~~~~~~~~
/workspace/ur5_ws/src/ur5_motion_planning/src/ur5_plan_and_analyze_node.cpp:437:14: error: expected ‘}’ at end of input
  437 |   RCLCPP_INFO(logger, "--- Analysis comple
      |              ^
/workspace/ur5_ws/src/ur5_motion_planning/src/ur5_plan_and_analyze_node.cpp:73:33: note: to match this ‘{’
   73 | int main(int argc, char** argv) {
      |                                 ^
gmake[2]: *** [CMakeFiles/ur5_plan_and_analyze_node.dir/build.make:76: CMakeFiles/ur5_plan_and_analyze_node.dir/src/ur5_plan_and_analyze_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/ur5_plan_and_analyze_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
